# rs-tree

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose-deploy.yml  docker-compose.yml
.sqlx/: query-0469035cca14bba8946eefb0a6d655e5e9c3ea465c1a4b3b457c438a65f93ccb.json  query-1b0fa1a48c24b44c3e29f780aeae93bb1772bf57dcf7ec4d51def1f343903655.json  query-1d8c66497f63fe35763eab7d53b05a133de871c2c7d7401f37c5f2993dcec38b.json  query-2fa58b7605c9ec2d99ea62566b9d6b2600d1708d90b234d376e89406b27fb748.json  query-35f2627e3ab9722f5f89638bc26cf5f3e3a0ec250fb496c41e600f5c809359fb.json  query-4ac47a932437c92f437f5b33fed7849448d5bc108b0d808f45e203f2f76948ed.json  query-5c1a1efa800c6e7c0a8dd8e1055a4614cde75538cdeaf7f7cac930ceb73a0088.json  query-61e9fd292683673f512f800a1380b5b1e3f7068a3f8e1e9d9ad3d431fe8142c6.json  query-69d48ad988b3964d2fe07002df8ed46730edd5ff402f461fc92ecfcb8b38e0f7.json  query-7b7ba9215a99ae30e5ab6105fa501a42d5e9c3989a2184783efed6bb3b672f23.json  query-836b457a54aa9c23adbd627ed756df49e978bf9c48d7ea59b51031ce6fe290eb.json  query-8afe9aa2b9ffcc3789a2173bf882b453187524234e32670d990024eac93535b0.json  query-96848efb3db7ece7594940a55053f53b6459b0cd5558424d6a7841e77a5c45f9.json  query-a976886bf3f52cd7e2f74dbafa7f35931f3e36d688104dafab310d8729423e7c.json  query-ab10dccd83776983d1a92a5e100d6abd73932cc587027de62d80fafbf9466d23.json  query-b07cd10995f2bc4b8f701d56653e38a772d3cde6bcf592ea9482019feb68cb94.json  query-c54053ecbc8c9a42765bc4bc3081b19ffc828390e2a0cb4bf5d42d4bc34b7670.json  query-d2695e284c8a200ac611391b368ac6374d516384dc8aa3e85b6eb74dfd2bdda8.json  query-e280b194593ed330e966ef9c0fb25814d671e2b0b0a2b0d57e3ca0aaead8d4f0.json  query-e84f7cb73189f9cb88a19dcd25e19ca76331b0d2f94b67829abbde165a71ab72.json  query-ec4abcd860e7cc60b92ade85b3ae861a4761e8c261341a601dab9460cfc34754.json  query-fdd67b9967007fe1de6ed94f84dfbc24a6b9976e571a530971a12e083f90636b.json
caddy/: Caddyfile
doc/: openapi.yaml
docs/: Roadmap.md  openapi.yaml
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  tree.rs  tree_entry.rs  url.rs  user.rs
migration/src/: lib.rs  m20231229_022203_user_table.rs  m20231229_232418_url_data.rs
migrations/: 20240101192509_init.sql  20240105233717_dev_remove_once_u-and-g-management_is_implemented.sql
pwdpbkdf2/: Cargo.toml
pwdpbkdf2/src/: lib.rs  ring.rs  rust_crypto.rs
src/: lib.rs  main.rs  setup.rs  snp_manager.rs  url_management.rs  user_management.rs  utility.rs
src/db/: acl.rs  link_tree.rs  mod.rs  user.rs
src/services/: mod.rs  url_management.rs  user_management.rs
