[package]
name = "rs-tree"
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace]
members = [".", "pwdpbkdf2"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.8.0", features = ["actix-redis", "redis-rs-session"] }
actix-web = "4.4.1"
anyhow = "1.0.77"
daemonize = "0.5.0"
dotenv = "0.15.0"
env_logger = "0.10.1"
log = "0.4.20"
pwdpbkdf2 = { path = "pwdpbkdf2" }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.29"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid", "chrono", "time", "json"] }
thiserror = "1.0.52"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
