[package]
name = "rs-tree"
version = "0.0.0-wip"
authors = ["Jonathan \"Nath\" Schild <nath@j-schild.de>"]
edition = "2021"
description = "Advanced link tree application with user and group management written in Rust."
readme = "README.md"
repository = "https://github.com/jonathan-schild/rs-tree"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.8.0", features = ["actix-redis", "redis-rs-session"] }
actix-web = "4.4.1"
actix-web-httpauth = "0.8.1"
anyhow = "1.0.77"
base64 = "0.21.5"
daemonize = "0.5.0"
dotenv = "0.15.0"
env_logger = "0.10.1"
jsonwebtoken = "9.2.0"
log = "0.4.20"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.29"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid", "chrono", "time", "json"] }
thiserror = "1.0.52"
tokio = { version = "1.35.1", features = ["full"] }
totp-rs = "5.4.0"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "serde"] }

[profile.dev-docker]
inherits = "dev"
opt-level = 3

[profile.release]
lto = "fat"
panic = "abort"
